@@ -1,25 +1,6 @@
 package org.codehaus.plexus.languages.java.jpms;
 
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -41,7 +22,7 @@ class SourceModuleInfoParserTest {
     @Test
     void test() throws Exception {
         JavaModuleDescriptor moduleDescriptor =
-                parser.fromSourcePath(Paths.get("src/test/test-data/src.dir/module-info.java"));
+                parser.fromSourcePath(Path.of("src/test/test-data/src.dir/module-info.java"));
         assertEquals("a.b.c", moduleDescriptor.name());
 
         Iterator<JavaRequires> requiresIter = moduleDescriptor.requires().iterator();
